[package]
name = "rvsp"
version = "0.1.6"
edition = "2021"
description = "Audio spectrum visualizer in Rust"
authors = ["Cynthia <cynthia2048@proton.me>"]
license = "GPL-3.0"
keywords = ["audio", "fft", "visualizer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
realfft = "3.4.0"
lazy_static = "1.5.0"
winit = "0.30.10"
glutin = "0.32.3"
glutin-winit = "0.5.0"
gl = "0.14.0"

[dependencies.pipewire]
git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs"
