[package]
name = "vsp-rs"
version = "1.0.1"
edition = "2021"
description = "Stylish OpenGL Audio Spectrum Visualizer in Rust"
authors = ["Cynthia <cynthia2048@proton.me>"]
repository = "https://github.com/cynthia2006/rvsp"
readme = "README-crates.io.md"
license = "GPL-3.0"
keywords = ["audio", "dsp", "video", "fft", "visualizer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
realfft = "3.4"
lazy_static = "1.5"
gl = "0.14"

[dependencies.winit]
version = "0.30"
default-features = false
features = ["wayland"]

[dependencies.glutin]
version = "0.32"
default-features = false
features = ["wayland"]

[dependencies.glutin-winit]
version = "0.5"
default-features = false
features = ["egl"]

[dependencies.pipewire]
version = "0.8"
